--- a/Projet Onssa/Accueil.resx
+++ b/Projet Onssa/Accueil.resx
@@ -139,6 +139,17 @@
         eALjXIhnQy4X4gmMcyFeUQG12hfMM9IOv6GV6gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="bunifuFlatButton7.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAEaSURBVFhH7ZcxbsJAEEXdhFOhIHEyGkLALoJdWbJ9gJzKRYIQlyA2/PnFbIbRypuG+Em/2L9v
+        7Sl3sxlhs/lcFMd2l5dtP+SaOH1eNW91Xb/gdyF52b3/cjBpDmW7xe9CBuH7LnUrVMnIq259G6Jqv1CF
+        yJRYJsf9/jxA7ADiW4FGrJ64gkJ8K9CI1RPvoN7XayG2J95Bva/XQmxPXEEhvhVoxOqJKyjEtwKNWD1x
+        hYk83wDiW4FGrJ64gkJ8K9CI1RPvoN7XayG2J95Bva/XQmxPXEEhvhVoxOqJKyjEtwKNWD1xhYnMA7jf
+        H26s51EYruZLVMkoPppXDHBCFVIcm71M+Vd5eC0fHyZ4G1z0wQS5uA+TmX9Klv0AMMsPvas64e0AAAAA
+        SUVORK5CYII=
+</value>
+  </data>
   <data name="bunifuFlatButton6.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAMFJREFUWEft
