Consultation Ajout (Code)

--- a/Projet Onssa/Accueil.resx
+++ b/Projet Onssa/Accueil.resx
@@ -163,6 +163,21 @@
         kvJ4+YymbOxdKDSRvgsXKDY/kN6wTRsHjcYtEL9t27TYUYYAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="bunifuFlatButton1.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAkRJREFUWEft
+        VstqFEEUHXwvXejeoAsXIggKPkB8LTTZZBPFD1AU3AuuGgV1qmucqSpdNFNVnXUTxE8Q1yL6HQGNSUwy
+        oonnxtuT7sxMpiehG0UPHLrq3lP3HvpRXbX/2AlC46/Ilr3I02ohjJ0KteuAK9LYSQ5Xg1DbCTT+Dq4x
+        O0LZ65wuFw1tT6HhUqZ5ysVQ2RMsKw9oJELtP+O6nGm+QjGh/ROWlY9QuaBrQLnHHK4OaHyna0DbBxyu
+        DkLF45k7cJPD1SE07TE0XwCXw1b7JIerRRAk+4g8/cuBW3oJL9PDSohe3HYDUtl696UqmdSL227gjzQg
+        TXyc09sG1eipW8yAf58kyW5O5/BU+8PYdu8L46J1YixldIjTOQRBsAf1PmRrDzOwUDfutNZ6P6dykNrf
+        huZbWizDRWH8LZblEMTxAdmKz0BD+8ZQA7McqkVRtJfIUzoDXED+J+v68Uf40p1jec965GdJV8hAQ/nz
+        GM+BXxq6fZZi2HJnWDOQuENJZv1XcC41hXFxA7gqnq8J5Vsc+5TGtuDHLdaPcgfsVYzpn79UV+4yxbCJ
+        vGHNYBr3evN6Ojv+Xj+CAUKzGR8k8hQF/DXkV1nXj6upWULv+mIG5oWePjroE5TG3YMmex5M2ZHK32VZ
+        DlTrxSt7DJp50g4zkPItvuFdnM6BfsVCu0f0whFp/KwZH+F0DlQDj+5dtnZRA3ie7TFObxt8bsjVLW5g
+        feOgA+hOiNPyprqjGCiF/Q0YdwOOn1dB6sVt/3nUar8AtuEUfXOxQ3AAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btn_Ov.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAkRJREFUWEft
